# ggxx_rnd

./: .gitignore  CMakeLists.txt
cmake/: add_gg_test.cmake
ggpo/: CMakeLists.txt  commit_id.txt
ggpo/include/: ggponet.h
ggpo/lib/ggpo/: main.cpp
ggpo/lib/ggpo/backends/: synctest.cpp
ggpo/lib/ggpo/network/: udp_msg.h
ggxxacpr/: CMakeLists.txt
ggxxacpr/test/: CMakeLists.txt  add_gg_test.cmake
ggxxacpr/test/replays/bugrepro/: fafnir_tyrant_rave.ggr  justice_double_nb.ggr
ggxxacpr/test/replays/matches/: 1590687766.ggr  1590688106.ggr  1590688461.ggr  159085512514312.ggr  159085566112348.ggr  15908567506164.ggr  159085895311172.ggr  session1.ggr  session10.ggr  session2.ggr  session5.ggr  session6.ggr  sol_vs_ky.ggr
include/: binary_serializer.h  diff.h  fiber_mgmt.h  memory_dump.h  mini_reflection.h
libgg/: CMakeLists.txt
libgg/cmake/: patch.h.in  x64dbg_patch_to_cpp_header.cmake
libgg/include/: attach_console.h  binary_patch.h  hash.h  libgg.h  log.h  memory_dump.h  memory_protection.h  ui.h
libgg/patches/: GGXXACPR_Win_Steamless.int3-instead-of-infinite-loop.1337  GGXXACPR_Win_Steamless.load_libgg.dll.1337  GGXXACPR_Win_Steamless.multiple-instances.1337  GGXXACPR_Win_Steamless.open-DisplayConfig.cfg-in-shared-mode.1337  GGXXACPR_Win_Steamless.predictable-background-io-timing.txt
libgg/src/libgg/: command_line.cpp  configuration.cpp  configuration.h  game.cpp  game_state.cpp  game_state.h  game_state_debug.cpp  ggpo.cpp  ggpo.h  libgg.cpp  libgg.rc  patches.cpp  patches.h  print_state.cpp  print_state.h  recorder.cpp  recorder.h  skip_intro.cpp  skip_intro.h  sound_fix.cpp  sound_fix.h  training_mode_ex.cpp  training_mode_ex.h  unattended.cpp  unattended.h
libgg/src/patch/: app.manifest  app.rc  main.cpp  main_dev.cpp  resource.h
libgg/src/utils/: attach_console.cpp  binary_patch.cpp  fiber_mgmt.cpp  iat_patch.cpp  memory_protection.cpp  ui.cpp
libgg/test/: CMakeLists.txt
libgg/test/src/: fiber_mgmt.cpp
replays/: charselect_screen_random_char.ggr  charselect_screen_random_stage.ggr  faust_taunt.ggr  kliff_taunt.ggr  synctest_1f_kliff_throw.ggr  synctest_8f_fafnir_tyrant_rave.ggr  training_kliff_taunt.ggr  vs2p_fafnir_tyrant_rave.ggr  vs2p_faust_taunt.ggr  vs2p_kliff_throw.ggr
scripts/: _get_build_dir.bat  _get_gg_path.bat  build_vs2019.bat  build_vs2019_ninja.bat  loop_ctest_until_fail.bat  start_netplay_p1.bat  start_netplay_p2.bat  start_network_session.bat  start_replay.bat  test_network_session.bat
src/: command_line.cpp  command_line.h  config.cpp  config.h  configuration.cpp  configuration.h  fiber_mgmt.cpp  fibers.cpp  fibers.h  game.cpp  game.h  game_state.cpp  game_state.h  game_state_debug.cpp  game_state_debug.h  ggpo.cpp  ggpo.h  libgg.cpp  libgg.h  libgg_args.h  libgg_settings.h  network.cpp  network.h  nowindow.cpp  patch_iat.cpp  patch_iat.h  patches.cpp  patches.h  print_state.cpp  print_state.h  recorder.cpp  recorder.h  rollback_test.cpp  rollback_test.h  skip_intro.cpp  skip_intro.h  sound_fix.cpp  sound_fix.h  training_mode_ex.cpp  training_mode_ex.h  (+5 more)
src/game_state/: match.cpp  match.h
src/steam_api_nop/: CMakeLists.txt  README.md  SteamAPI.cpp  SteamFriends005.h  SteamGameServer009.cpp  SteamGameServer009.h  SteamMasterServerUpdater001.cpp  SteamMasterServerUpdater001.h  SteamMatchmaking007.h  SteamNetworking004.h  SteamRemoteStorage002.h  SteamUser012.h  SteamUtils005.cpp  SteamUtils005.h
src/steam_api_nop/include/: debug.h
src/steam_api_nop/include/osw/: UserStatsCommon.h
test/: binary_serializer.cpp  fiber_mgmt.cpp  gg.cmake  ggpo.cpp  memory_dump.cpp  mini_reflection.cpp  pretty_print.cpp  test.h
test/replays/bugrepro/: charselect_screen.ggr  clash.ggr
test/replays/matches/: 1590687408.ggr  1590690360.ggr  15908559402192.ggr  159085821113744.ggr  159146397416240.ggr  faust_vs_faust.ggr  session2.ggr  session4.ggr  session7.ggr  session8.ggr  session9.ggr  slayer_vs_may.ggr  sol_vs_ky.ggr
x64dbg_patches/: GGXXACPR_Win_Steamless.config-in-game-dir.1337  GGXXACPR_Win_Steamless.enable_charselect_timer_when_byte_at_0x50ACD0_equals_x10.1337  GGXXACPR_Win_Steamless.predictable-background-io-timing.1337
